<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_header_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:text="@string/txt_header_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                >
                <LinearLayout android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    >
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/lbl_fullname"
                        />
                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:hint="@string/input_fullname_hint"
                        />
                </LinearLayout>
                <LinearLayout android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/lbl_lastname"
                        />
                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:hint="@string/input_lastname_hint"
                        />
                </LinearLayout>
                <LinearLayout android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/lbl_secondlastname"
                        />
                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:hint="@string/input_second_lastname_hint"
                        />
                </LinearLayout>
                <LinearLayout android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/lbl_age"
                        />
                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:hint="@string/input_age_hint"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout android:orientation="vertical"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/lbl_size"
                            />
                        <EditText
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:inputType="phone"
                            android:textSize="16sp"
                            android:hint="@string/input_size_hint"
                            />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/lbl_weight"
                            />
                        <EditText
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:inputType="phone"
                            android:textSize="16sp"
                            android:hint="@string/input_weight_hint"
                            />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:text="@string/lbl_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    />
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbt_male"
                        />
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbt_female"
                        />
                </RadioGroup>
                <LinearLayout
                    android:paddingVertical="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_save"
                    />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>